// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";
package proto;
option go_package = "github.com/NubeIO/flow-framework/module/proto";

message InitRequest {
  uint32 add_server = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  int64 value = 1;
}

message PutRequest {
  string key = 2;
  int64 value = 3;
}

message Empty {}

message SumRequest {
  int64 a = 1;
  int64 b = 2;
}

message SumResponse {
  int64 r = 1;
}

message APIRequest {
  string path = 1;
  string args = 2;
}

message APIResponse {
  bytes r = 1;
}

service Module {
  rpc Init(InitRequest) returns (Empty){}
  rpc Get(GetRequest) returns (GetResponse){}
  rpc Put(PutRequest) returns (Empty){}
}

service DBHelper {
  rpc Sum(SumRequest) returns (SumResponse);
  rpc CallAPI(APIRequest) returns (APIResponse);
}
